
[tool.poetry]
name = "raft"
homepage = "https://github.com/erewok/raft-py"
version = "0.1.0"
description = "Implementation of raft in python"
authors = ["Erik Aker <eraker@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
rich = { version = "^12.1.0", optional = true }
trio = { version = "^0.20.0", optional = true }

[tool.poetry.extras]
all = ["trio", "rich"]
async = ["trio"]
rich = ["rich"]

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-mypy = "^0.9.1"
pytest-pycodestyle = "^2.3.0"
pytest-trio = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pycodestyle]
ignore = "E203,W503,F541"
max-line-length = 110
